feat: add product component

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,9 +18,9 @@
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px 30px;
   }
 }
 
