--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,9 +1,10 @@
-@import '../abstracts/variables';
+@import '../../scss/abstracts/variables';
 
 .product {
-  width: 380px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
   text-align: center;
-  margin-bottom: 65px;
 
   &__image {
     width: 100%;
@@ -12,7 +13,6 @@
   &__title {
     font-size: 25px;
     font-weight: 900;
-    margin: 20px 0;
   }
 
   &__selector {
@@ -27,7 +27,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 20px;
   }
 
   &__price {
@@ -39,19 +38,26 @@
 }
 
 .selector {
-  &__type {
-    display: flex;
-    flex: 1;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
 
-    &:first-of-type {
-      margin-bottom: 6px;
-    }
+  &__type {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
   }
 
-  &__item {
+  &__size {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+
+  &__link {
+    width: 100%;
     border: 1px solid transparent;
     padding: 8px;
-    flex: 1;
     cursor: pointer;
     font-weight: 600;
     font-size: 14px;
@@ -63,6 +69,11 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
       border-radius: 5px;
       cursor: auto;
+    }
+
+    &.disabled {
+      opacity: 0.4;
+      pointer-events: none;
     }
   }
 }
